--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React.js using NPM, Babel6 and Webpack</title>
+    <title>React Basic Mentions</title>
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,300italic,300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app" />
